add combinatorPattern